chore: Update base image for devx environment
This pulls from the develop tag instead of the latest tag.
Latest is for production releases.

--- a/Dockerfile.devx
+++ b/Dockerfile.devx
@@ -1,4 +1,4 @@
-FROM leadiv/breakingnews-vue:latest
+FROM leadiv/breakingnews-vue:develop
 MAINTAINER Paul Borrego <paul.borrego@turner.com>
 
 ENV HOME=/home/app
