--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     environment:
       - NODE_ENV=development
       - API_INTERVAL=120000
-      - API_URL=http://dataref.cnn.com/breaking_news/domestic.json
+      - API_URL=/static/api.mock.json
     build:
       context: .
       dockerfile: Dockerfile.devx
@@ -18,7 +18,7 @@ services:
     environment:
       - NODE_ENV=testing
       - API_INTERVAL=120000
-      - API_URL=http://dataref.cnn.com/breaking_news/domestic.json
+      - API_URL=/static/api.mock.json
     build:
       context: .
       dockerfile: Dockerfile.devx
