chore: Update build process (#3)
* chore: Remove library build command

The docker builds are for developers working on the development
of the component directly and not for consumers of the component
library. The building of the dist file will be done when creating
a new release.

* chore: Updating docker image pull

* chore: Allow dist folder to be in the repo

* chore: Updating maintainer information

--- a/Dockerfile.devx
+++ b/Dockerfile.devx
@@ -1,5 +1,5 @@
-FROM leadiv/breakingnews-vue:develop
-MAINTAINER Paul Borrego <paul.borrego@turner.com>
+FROM leadiv/breakingnews-vue:base
+MAINTAINER Paul Borrego <leadiv@gmail.com>
 
 ENV HOME=/home/app
 ENV APP=$HOME/breakingnews-vue
